--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches: [ "main", "feat/calc"]
 
+permissions:
+  contents: write # This is required for creating releases
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -60,7 +63,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
-
+    permissions:
+      contents: write
+      
     steps:
     - name: Download all artifacts
       uses: actions/download-artifact@v4
