--- a/Board/CMakeLists.txt
+++ b/Board/CMakeLists.txt
@@ -3,9 +3,14 @@ project(TicTacToe)
 
 set(CMAKE_CXX_STANDARD 17)
 
+# Add the globals library first
+add_library(globals ../Globals/globals.cpp)
+target_include_directories(globals PUBLIC ../Globals)
+
 # Add the core library
 add_library(board src/Board.cpp)
 target_include_directories(board PUBLIC src)
+target_link_libraries(board PUBLIC globals)  # Link board with globals
 
 # Add the main game executable
 add_executable(tictactoe src/main.cpp)
@@ -16,14 +21,12 @@ include(FetchContent)
 FetchContent_Declare(
     googletest
     GIT_REPOSITORY https://github.com/google/googletest.git
-    GIT_TAG v1.16.0 # latest stable release at the time of writing code
+    GIT_TAG v1.16.0
 )
 
-# For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-# Enable testing
 enable_testing()
 
 # Add test executable
@@ -34,6 +37,5 @@ target_link_libraries(test_board
     GTest::gtest_main
 )
 
-# Register the test
 include(GoogleTest)
 gtest_discover_tests(test_board)
