--- a/user_auth/tests/CMakeLists.txt
+++ b/user_auth/tests/CMakeLists.txt
@@ -1,26 +1,35 @@
 cmake_minimum_required(VERSION 3.10)
 
-# Enable testing
+set(CMAKE_AUTOMOC ON)
 
-enable_testing()
+# Find required packages for tests
+find_package(Qt6 COMPONENTS Test REQUIRED)
 
-# Find GoogleTest package
+# Create test executables
+set(TEST_SOURCES
+    test_login_page.cpp
+    test_welcome_page.cpp
+    test_main_window.cpp
+    main_test.cpp
+)
 
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS})
+# Include directories
+include_directories(${CMAKE_SOURCE_DIR})
 
-# Define test sources
+# Create a list of source files excluding main.cpp
+set(APP_SOURCES
+    ${CMAKE_SOURCE_DIR}/src/main_window.cpp
+    ${CMAKE_SOURCE_DIR}/src/login_page.cpp
+    ${CMAKE_SOURCE_DIR}/src/welcome_page.cpp
+    ${CMAKE_SOURCE_DIR}/src/auth/user_auth.cpp
+    ${CMAKE_SOURCE_DIR}/src/db/database.cpp
+)
 
-set(TEST_SOURCES test_user_auth.cpp test_database.cpp ${CMAKE_SOURCE_DIR}/src/auth/user_auth.cpp ${CMAKE_SOURCE_DIR}/src/db/database.cpp )
-
-# Create test executable
-
-add_executable(user_auth_tests ${TEST_SOURCES})
-
-# Link libraries
-
-target_link_libraries(user_auth_tests GTest::GTest GTest::Main SQLite::SQLite3 OpenSSL::Crypto )
-
-# Add test to CTest
-
-add_test(NAME UserAuthTests COMMAND user_auth_tests)
+add_executable(gui_tests ${TEST_SOURCES} ${APP_SOURCES})
+target_link_libraries(gui_tests
+    Qt6::Test
+    Qt6::Core
+    Qt6::Widgets
+    SQLite::SQLite3
+    OpenSSL::Crypto
+)
