Create the full integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,10 @@ option(BUILD_COMPONENTS_STANDALONE "Build components as standalone projects" OFF
 if(BUILD_COMPONENTS_STANDALONE)
     add_subdirectory(components/auth)
     add_subdirectory(components/game)
+    add_subdirectory(components/game_history)
+endif()
+
+# Add integration tests if testing is enabled
+if(BUILD_TESTING)
+    add_subdirectory(tests/integration)
 endif()
