--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -7,6 +7,7 @@ include(${CMAKE_SOURCE_DIR}/cmake/CommonSettings.cmake)
 # Add component subdirectories
 add_subdirectory(${CMAKE_SOURCE_DIR}/components/auth ${CMAKE_BINARY_DIR}/auth_build)
 add_subdirectory(${CMAKE_SOURCE_DIR}/components/game ${CMAKE_BINARY_DIR}/game_build)
+add_subdirectory(${CMAKE_SOURCE_DIR}/components/game_history ${CMAKE_BINARY_DIR}/game_history_build)
 add_subdirectory(${CMAKE_SOURCE_DIR}/components/gui ${CMAKE_BINARY_DIR}/gui_build)
 
 # Create the main application executable
@@ -16,9 +17,11 @@ add_executable(tictactoe_app
 
 target_include_directories(tictactoe_app PRIVATE
     ${CMAKE_SOURCE_DIR}/components/gui/src
+    ${CMAKE_SOURCE_DIR}/components/game_history/src
 )
 
 target_link_libraries(tictactoe_app
     PRIVATE
         gui
+        game_history
 )
