--- a/components/gui/CMakeLists.txt
+++ b/components/gui/CMakeLists.txt
@@ -14,11 +14,13 @@ add_library(gui
     src/main_window.cpp
     src/login_page.cpp
     src/game_window.cpp
+    src/game_history_gui.cpp
 )
 
-target_include_directories(gui 
-    PUBLIC 
+target_include_directories(gui
+    PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/src
+        ${CMAKE_SOURCE_DIR}/components/game_history/src
 )
 
 # Link Qt libraries and other components
@@ -29,20 +31,21 @@ target_link_libraries(gui
         board
         ai
         globals
+        game_history
 )
 
 # Add tests if building tests
 if(BUILD_TESTING)
     find_package(Qt6 COMPONENTS Test REQUIRED)
-    
+
     add_executable(test_login_page
         tests/test_login_page.cpp
     )
-    
+
     target_include_directories(test_login_page PRIVATE
         src
     )
-    
+
     target_link_libraries(test_login_page
         PRIVATE
             GTest::gtest_main
@@ -52,15 +55,15 @@ if(BUILD_TESTING)
             Qt6::Test
             gui
     )
-    
+
     add_executable(test_main_window
         tests/test_main_window.cpp
     )
-    
+
     target_include_directories(test_main_window PRIVATE
         src
     )
-    
+
     target_link_libraries(test_main_window
         PRIVATE
             GTest::gtest_main
@@ -70,15 +73,15 @@ if(BUILD_TESTING)
             Qt6::Test
             gui
     )
-    
+
     add_executable(test_game_window
         tests/test_game_window.cpp
     )
-    
+
     target_include_directories(test_game_window PRIVATE
         src
     )
-    
+
     target_link_libraries(test_game_window
         PRIVATE
             GTest::gtest_main
@@ -87,9 +90,28 @@ if(BUILD_TESTING)
             Qt6::Test
             gui
     )
-    
+
+    add_executable(test_game_history_gui
+        tests/test_game_history_gui.cpp
+    )
+
+    target_include_directories(test_game_history_gui PRIVATE
+        src
+    )
+
+    target_link_libraries(test_game_history_gui
+        PRIVATE
+            GTest::gtest_main
+            GTest::gmock_main
+            Qt6::Core
+            Qt6::Widgets
+            Qt6::Test
+            gui
+    )
+
     include(GoogleTest)
     gtest_discover_tests(test_login_page)
     gtest_discover_tests(test_main_window)
     gtest_discover_tests(test_game_window)
+    gtest_discover_tests(test_game_history_gui)
 endif()
